[package]
name = "ux2-macros"
version = "0.9.0"
edition = "2021"
description = "Macro backend for ux2"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.23"
proc-macro2 = "1.0.50"

[lib]
proc-macro = true