[package]
name = "ux2"
version = "0.4.0"
edition = "2021"
description = "Non-standard integer types like `u7`, `u9`, `u10`, `u63`, `i7`, `i9` etc."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/ux2"
documentation = "https://docs.rs/ux2/"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux2-macros =  { path ="../ux2-macros", version = "0.5.0" }
num-traits = { version = "0.2.15", optional = true }
serde = { version = "1.0.160", features = ["derive"], optional = true }

# test with `RUSTDOCFLAGS="--cfg docsrs" cargo rustdoc --open --all-features`
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]