[package]
name = "ux2"
version = "0.8.5"
edition = "2021"
description = "Non-standard integer types like `u7`, `u9`, `u10`, `u63`, `i7`, `i9` etc."
license = "Apache-2.0"

repository = "https://github.com/JonathanWoollett-Light/ux2"
documentation = "https://docs.rs/ux2/"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["8", "std"]
128 = ["64"]
64 = ["32"]
32 = ["16"]
16 = ["8"]
8 = []
std = []

[dependencies]
serde = { version = "1.0.201", features = ["derive"], optional = true }
ux2-macros =  { path = "../ux2-macros", version = "0.9.0" }

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false

# test with `RUSTDOCFLAGS="--cfg docsrs" cargo rustdoc --open --all-features`
[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
